--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,10 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --text-primary: #0D2E65;
+  --text-secondary: #6b7280;
+  --border-primary: #d1d5db;
+  --border-secondary: #e5e7eb;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +27,11 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.lpg-container {
+  max-width: 83%;
+  margin: 0 auto;
+  padding: 0 1rem;
 }
