--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
   --text-secondary: #6b7280;
   --border-primary: #d1d5db;
   --border-secondary: #e5e7eb;
+  --btn-bg: #009970;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,14 +26,21 @@
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  color: var(--text-primary);
   font-family: Arial, Helvetica, sans-serif;
 }
 
 
 .lpg-container {
-  /* max-width: 83%; */
-  width: 1440px;
+  max-width: 83%;
+  /* width: 1440px; */
   margin: 0 auto;
   padding: 0 1rem;
+}
+
+.btn-bg{
+  background-color: var(--btn-bg);
+}
+.text-primary{
+    color: var(--text-primary);
 }
