--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,49 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+   --background: #ffffff;
+   --foreground: #171717;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
- --font-sans: "Barlow", system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", sans-serif;
-  --font-mono: "Barlow", system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", sans-serif;
-  --text-primary: #0D2E65;
-  --text-secondary: #6b7280;
-  --border-primary: #d1d5db;
-  --border-secondary: #e5e7eb;
-  --btn-bg: #009970;
+   --color-background: var(--background);
+   --color-foreground: var(--foreground);
+   --font-sans: 'Barlow', system-ui, -apple-system, BlinkMacSystemFont,
+      'Segoe UI', sans-serif;
+   --font-mono: 'Barlow', system-ui, -apple-system, BlinkMacSystemFont,
+      'Segoe UI', sans-serif;
+   --text-primary: #0d2e65;
+   --text-secondary: #75b551;
+   --border-primary: #d1d5db;
+   --border-secondary: #e5e7eb;
+   --btn-bg: #009970;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+   :root {
+      --background: #0a0a0a;
+      --foreground: #ededed;
+   }
 }
 
 body {
-  background: var(--background);
-  color: var(--text-primary);
-  font-family: "Barlow", sans-serif;
+   background: var(--background);
+   color: var(--text-primary);
+   font-family: 'Barlow', sans-serif;
 }
-
 
 .lpg-container {
-  max-width: 83%;
-  /* width: 1440px; */
-  margin: 0 auto;
-  padding: 0 1rem;
+   max-width: 83%;
+   /* width: 1440px; */
+   margin: 0 auto;
+   padding: 0 1rem;
 }
 
-.btn-bg{
-  background-color: var(--btn-bg);
+.btn-bg {
+   background-color: var(--btn-bg);
 }
-.text-primary{
-    color: var(--text-primary);
+.text-primary {
+   color: var(--text-primary);
+}
+
+.secondary-text {
+   color: var(--text-secondary);
 }
